##Text encoding: utf-8

2013-11-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/text.cc: ensure the item is created on loading.

2013-11-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: fix loading with attached objects.

2013-11-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: add steps numbering.

2013-11-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: implement position changes for objects
	attached to an arrow.
	* libs/gcp/reaction-prop-dlg.cc: ditto.
	* libs/gcp/reaction-prop.cc: ditto.
	* libs/gcp/reaction-prop.h: ditto.
	* ui/paint/arrow-object.ui: ditto.

2013-10-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: caching children positions now works.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcp/reaction-prop.cc: fis the Save method signature.
	* libs/gcp/reaction-prop.h: ditto.

2013-10-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment.cc: do not use a NULL atom properties. [#40194]

2013-09-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: start working on caching children positions.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcp/window.cc: really close the window on delete event.
	* libs/gcu/chemistry.cc: fix locale use to avoid a crash is setlocale()
	returns NULL.
	* libs/gcu/macros.h: fix compiler warning.
	* plugins/paint/selection/groupdlg.cc: don't crash when aligning ungrouped
	objects.

2013-07-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: more work on steps support.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcp/reaction-prop-dlg.cc: add callbacks.
	* libs/gcp/reaction-prop-dlg.h: ditto.

2013-07-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: position multiple objects around an arrow,
	only works with one object per line.

2013-05-28  Jean Bréfort  <jean.brefort@normalesup.org>